--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "task-manager",
   "version": "1.0.0",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/michitson/task-manager.git"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
